Release supporting HOD Combinations
+ Support get/post requests for combinations
+ Removed 3rd party http libs
+ Added new data objects for response parser